@@ -1,1 +1,1 @@
-5.2.0-alpha06
+5.2.0-beta01
