@@ -1,12 +1,18 @@
-2024-02-14  Charlie Zender  <zender@uci.edu>
+2024-02-15  Charlie Zender  <zender@uci.edu>
+
+	* NCO 5.2.0 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.2.0: Fast Car';git push
+	git tag -a 5.2.0-beta01 -m 'all: cf lsy mtd; ncclimo: tms inp_aut, fix inp_glb, fix djf-mode clm_bnd; ncclimo/ncremap: dpr cheyenne+ALCF mch, spp derecho, upd perlmutter; ncks: --chk_bnd/xtn, S1D works; ncremap: TR --mono*, ncoidw, MWF alg_lst, trfv2';git push --tags
 
 	* NCO 5.2.0-beta01 release procedure:
-	cd ~/nco;git commit -a -m 'Version 5.2.0-beta01: Mahomes';git push
+	cd ~/nco;git commit -a -m 'Version 5.2.0-beta01: Kansas City';git push
 	git tag -a 5.2.0-beta01 -m 'all: cf lsy mtd; ncclimo: tms inp_aut, fix inp_glb, fix djf-mode clm_bnd; ncclimo/ncremap: dpr cheyenne+ALCF mch, spp derecho, upd perlmutter; ncks: --chk_bnd/xtn, S1D works; ncremap: TR --mono*, ncoidw, MWF alg_lst, trfv2';git push --tags
 
 	* S1D add levlak and levgrnd coordinates from elmv3_r05l15.nc
 
 	* S1D add topounit support
+
+2024-02-14  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.2.0-alpha06 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha06: Be My Valentine';git push
